@@ -2,9 +2,10 @@ Ideas for improving pho (in no particular order).
 If you have more ideas, or want to contribute to the project,
 let me know!
 
-Should be relatively easy:
+Coming in the next release:
+- "Keywords mode", assigning keywords to notes fields (for categorizing photos)
 
-- In fullscreen mode, show image at full screen (no titlebar or frame).
+Should be relatively easy:
 
 - ? brings up a help screen.
 
