@@ -1,12 +1,12 @@
 This package was debianized by Akkana Peck <akkana@shallowsky.com> on
 Tue, 15 Oct 2002 21:49:27 -0700.
 
-It was downloaded from http://www.shallowsky.com/software/pho.html
+It was downloaded from http://shallowsky.com/software/pho.html
 
 Upstream Author(s): Akkana Peck <akkana@shallowsky.com
 
 Copyright:
-This software is copyright (c) 2002,2003,2004 by Akkana Peck.
+This software is copyright (c) 2002,2003,2004,2007 by Akkana Peck.
 
 
 You are free to distribute this software under the terms of
